--- a/tests/App/config.yml
+++ b/tests/App/config.yml
@@ -56,6 +56,7 @@ security:
             http_basic:
                 realm: "Admin Area"
             provider: chain_provider
+            logout_on_user_change: true
     access_control:
         - { path: ^/user, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
