--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     ],
     "license": "MIT",
     "require": {
-        "symfony/framework-standard-edition": "^3.4"
+        "php": "^7.1",
+        "symfony/symfony": "^4.3",
+        "symfony/monolog-bundle": "^3.4"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.3",
