--- a/tests/App/config.yml
+++ b/tests/App/config.yml
@@ -4,11 +4,13 @@ framework:
     router: { resource: "%kernel.root_dir%/../App/routing.yml" }
     profiler:
         collect: false
-    templating:      { engines: ['twig'] }
     session:
         handler_id:  ~
         storage_id: session.storage.mock_file
         name: MOCKSESSID
+
+twig:
+    strict_variables: "%kernel.debug%"
 
 doctrine:
     dbal:
@@ -56,7 +58,6 @@ security:
             http_basic:
                 realm: "Admin Area"
             provider: chain_provider
-            logout_on_user_change: true
     access_control:
         - { path: ^/user, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
