--- a/tests/App/routing.yml
+++ b/tests/App/routing.yml
@@ -19,3 +19,7 @@ test_user:
 test_exception:
     path: /exception
     defaults: { _controller: 'Tests\App\Controller\DefaultController::exceptionAction' }
+
+test_view:
+    path:  /view
+    defaults: { _controller: 'Tests\App\Controller\DefaultController::viewAction' }
