--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "require": {
         "php": "^7.1",
         "symfony/symfony": "^4.3",
-        "symfony/monolog-bundle": "^3.4"
-    },
-    "require-dev": {
-        "symfony/phpunit-bridge": "^4.3",
-        "phpunit/phpunit": "^6.0",
+        "symfony/monolog-bundle": "^3.4",
         "twig/twig": "^2.12",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "illuminate/support": "^6.4"
+    },
+    "require-dev": {
+        "symfony/phpunit-bridge": "^4.3",
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
