Enables a way to prevent removing unused private services from container

--- a/tests/App/config/config.yml
+++ b/tests/App/config/config.yml
@@ -75,3 +75,7 @@ services:
     Tests\App\Controller\DefaultController:
         calls:
             - ['setContainer', ['@service_container']]
+
+    test.unused_private_service:
+        class: Tests\App\Services\UnusedService
+        public: false
