Files on form submit

--- a/tests/App/config/config.yml
+++ b/tests/App/config/config.yml
@@ -1,6 +1,7 @@
 framework:
     secret: secret
     test: ~
+    form: ~
     router: { resource: "%kernel.root_dir%/../App/routing.yml" }
     profiler:
         only_exceptions: false
