--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.3",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "symfony/form": "^4.3"
     },
     "autoload": {
         "psr-4": {
