--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.3",
-        "symfony/form": "^4.3"
+        "symfony/form": "^4.3",
         "phpunit/phpunit": "^7.5"
     },
     "autoload": {
