--- a/tests/App/config/config.yml
+++ b/tests/App/config/config.yml
@@ -11,6 +11,17 @@ framework:
         storage_id: session.storage.mock_file
         name: MOCKSESSID
 
+monolog:
+    handlers:
+        file_log:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
+
+        syslog_handler:
+            type: syslog
+            level: error
+
 twig:
     strict_variables: "%kernel.debug%"
     paths: ["%kernel.root_dir%/../App/templates"]
@@ -30,17 +41,6 @@ doctrine:
                         type: annotation
                         dir: "%kernel.root_dir%/../App/Entity"
                         prefix: 'Tests\App\Entity'
-
-monolog:
-    handlers:
-        main:
-            type:         fingers_crossed
-            action_level: error
-            handler:      nested
-        nested:
-            type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
-            level: debug
 
 security:
     encoders:
