--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.33",
-        "illuminate/support": "^5.6",
+        "illuminate/support": "^5.6|^6.0",
         "phpunit/phpunit": "^7.5",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4"
