--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "illuminate/support": "^5.6|^6.0",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^7.5|^9.5",
         "symfony/browser-kit": "^4.4|^5.0",
-        "symfony/css-selector": "^4.4|^5.0"
+        "symfony/css-selector": "^4.4|^5.0",
+        "ext-json": "*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "3.2.*",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "symfony/yaml": "^4.4|^5.0",
         "symfony/twig-bundle": "^4.4|^5.0",
         "twig/twig": "^2.10",
