--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.2",
-        "illuminate/support": "^5.6|^6.0",
-        "phpunit/phpunit": "^7.5|^9.5",
-        "symfony/browser-kit": "^4.4|^5.0",
-        "symfony/css-selector": "^4.4|^5.0",
+        "php": ">=7.4",
+        "illuminate/support": "^6.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "^5.0",
+        "symfony/css-selector": "^5.0",
         "ext-json": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
-        "symfony/yaml": "^4.4|^5.0",
-        "symfony/twig-bundle": "^4.4|^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/twig-bundle": "^5.0",
         "twig/twig": "^2.10",
-        "symfony/security-bundle": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/http-foundation": "^4.4|^5.0",
-        "symfony/var-dumper": "^4.4|^5.0",
-        "symfony/dom-crawler": "^4.0|^5.0",
-        "symfony/translation-contracts": "^1.0",
+        "symfony/security-bundle": "^5.0",
+        "symfony/form": "^5.0",
+        "symfony/http-foundation": "^5.0",
+        "symfony/var-dumper": "^5.0",
+        "symfony/dom-crawler": "^5.0",
         "symfony/monolog-bundle": "^3.5",
         "league/factory-muffin": "^3.1"
     },
